 - Leopard resolution icon added. [Jeff B]
 - Added a Japanese translation. [Jeff B]
 - Added an optional status bar (resize handle no longer overlaps screen). [Jeff B]
 - New ROM Info and About DeSmuME windows have been added. [Jeff B]
 - Fixed several bugs in window resizing. [Jeff B]
 - Added FAT image support for homebrew games (thanks to TypeError). [Jeff B]
 general:
 - Fixed possible segfault in ROMReader on ia64 and amd64. [evilynux]
 - Fixed a crash bug with 2D background corrupting memory [shash]
 - Flag check optimization [carlo_bramini]
 - Applied some endian fixes in GPU (thanks to Phazz) [Jeff B]
 gtk-glade:
 - Added DeSmuME version in about dialog. [evilynux]
 - Updated website url in about dialog. [evilynux]
 - Added Brazilian Portuguese translation by Dreampeppers99. [evilynux]
 - Better desktop menu entry following FreeDesktop specifications. [evilynux]
 gtk:
 - Updated website url in about dialog. [evilynux]
 - Better desktop menu entry following FreeDesktop specifications. [evilynux]
 windows port:
 - DirectInput control interface with joystick support [CrazyMax aka mtabachenko]
 - Matrix and Light viewer [Acid Burn]
	
0.7.2 -> 0.7.3
 gtk-glade:
  - Full localization using intltool/gettext. [evilynux]
 general:
  - Added a README.TRANSLATION documenting the localization process. [evilynux]
 MacOS X:
  - Initial version of the Mac interface added. [Jeff B]

0.7.1 -> 0.7.2
 spu:
  - big endian fixes. [cyberwarriorx]
 gpu:
  - big endian fixes. [marcus_c]
 gtk-glade:
  - opengl improvements. [masscat]
 general:
  - Added support for setting NDS firmware language value. [masscat]
  - Function added for setting firmware language. [masscat]
  - Mac/msys compilation fixes. [cyberwarriorx]
  - Fix compilation when pkg-config macros are not available [evilynux]

0.7.0 -> 0.7.1
 general:
  - Added GDB debugger stub [masscat]
  - Added new/different GBAMP CFlash image reader/writer [masscat]
 gpu:
  - Major speedup to the 2D core [shash]
 gtk-glade: